@@ -353,6 +353,7 @@ Jan Pieter Riegel
 Armin Rigo
 Nicholas Riley
 Jean-Claude Rimbault
+Anthony Roach
 Andy Robinson
 Jim Robinson
 Kevin Rodgers
